--- a/avby-front/src/pages/RegisterPage/Register.css
+++ b/avby-front/src/pages/RegisterPage/Register.css
@@ -14,6 +14,21 @@
     text-align: center;
 }
 
+.reg-submit{
+    text-align: center;
+}
+
+.login-register{
+    margin-top: 20px;
+}
+
+.form{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 form button {
     height:40px;
     width:190px;
