--- a/avby-front/src/components/ModalsWindow/NavBarModalWindows/AnnoucementModal.css
+++ b/avby-front/src/components/ModalsWindow/NavBarModalWindows/AnnoucementModal.css
@@ -12,10 +12,8 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            overflow-y: scroll;
-            height: 300px;
-
-            
+            overflow-y: scroll;    
+            max-height: 300px;     
         }
 
         h3{
