--- a/avby-front/src/pages/CarPage/CarPage.css
+++ b/avby-front/src/pages/CarPage/CarPage.css
@@ -202,7 +202,7 @@ span.owner__city{
     width: 25px;
 }
 
-.add_favorite__btn{
+.add_favorite__btn {
     
 }
 
@@ -214,12 +214,17 @@ span.owner__city{
     margin-left: 10px;
     background: #8080803f;
     border-radius: 5px;
+
+    img{
+        width: 25px;
+    }
+}
+.bookmarks.active{
+    background: #d83e3e;
 }
 
 
-.bookmarks img{
-    width: 25px;
-}
+
 .car-info__description{
     width: 100%;
     padding: 0;
