--- a/avby-front/src/components/ModalsWindow/NavBarModalWindows/AnnoucementModal.css
+++ b/avby-front/src/components/ModalsWindow/NavBarModalWindows/AnnoucementModal.css
@@ -25,6 +25,11 @@
             margin-bottom: 20px;
             border-bottom: 1px solid #E1E8EE;
         }
+
+        .item__empty{
+            text-align: center;
+            padding: 10px;
+        }
     }
 }
 
