--- a/avby-front/src/components/ModalsWindow/NavBarModalWindows/Chat/ChatModal.css
+++ b/avby-front/src/components/ModalsWindow/NavBarModalWindows/Chat/ChatModal.css
@@ -12,8 +12,24 @@
             list-style: none;
 
             .item {
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+                padding: 10px;
+                border-bottom: 1px solid #E1E8EE;
                 width: 100%;
                 cursor: pointer;
+
+                p{
+                    color: #171a1e;
+                    font-size: 20px;
+                    margin-bottom: 5px;
+                }
+
+                span{
+                    font-size: 12px;
+                    color: #48494a;
+                }
             }
 
             .item:hover {
@@ -27,11 +43,30 @@
         padding-left: 10px;
         width: 70%;
 
-        .room_name{
+        .selected_room{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             margin-bottom: 10px;
-            margin-left: 10px;
-        }
+            padding: 5px 10px 0 10px;
 
+            h2{
+                margin: 0;
+            }
+
+            span{
+                font-size: 12px;
+                color: #171a1e;
+                padding: 2px 5px;
+                border-radius: 5px;
+            }
+
+            span:hover{
+                background-color: #E1E8EE;
+                color: red;
+            }
+        }
+        
         .no_messages{
             text-align: center;
             margin-top: 20px;
